--- a/curricyoulum/style.css
+++ b/curricyoulum/style.css
@@ -65,3 +65,23 @@ label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
 #form_title {
     font-size: 3em;
 }
+
+#suggestions {
+    width: 300px;
+    border-style: solid;
+    border-width: 0 1px 1px 1px;
+}
+
+#suggestions #suggestion {
+    border-style: solid;
+    border-width: 1px 0 0 0;
+}
+
+#suggestions #suggestion:hover {
+    background-color: #565656;
+    color: #fff;
+}
+
+#suggestions #suggestion td {
+    padding: 10px;
+}
